@@ -99,6 +99,7 @@ Current development version 3.32-09 (2022-07-31)
 - 09: Bugfix #1051: Error in last COBOL import phase with certain PERFORM THRU
       statements, new import option for tidying sequential paragraph calls <2>
 - 09: Bugfix #1052: Defective COBOL import of screen DISPLAY statements <2>
+- 09: Bugfix #1053: COBOL array declaration import (bad fix #695) revised <2>
 - 09: Bugfix #1054: Width of Alternatives not sufficient for long comments <2>
 
 Version 3.32 (2021-09-19) requiring Java 11 or newer
